# PyCSEMRI_fast

./: .gitignore  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChannelCombh5.ipynb  ChannelCombh5_Magn.ipynb  ChannelCombh5_Mixed.ipynb  Example_ChanComb_h5.py  Example_ChanComb_h5_ConfidenceMap.py  Example_ChanComb_h5_MagnFit.py  Makefile  README.md  cmake_install.cmake  data.py  fwFit_ComplexLS_1r2star.py  fwFit_MagnLS_1r2star.py  fwFit_MixedLS_1r2star.py  fw_i2cm1i_graphcut.py  graphCutIterations.py  install_manifest.txt  magn_debug_log.txt  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: python-publish.yml
include/: lsqcpp.hpp  lsqcpp_workspace.hpp  minimal-eigen.tar.bz2  minimal_boost.tar.bz2
libdecomposeGivenFieldMapAndDampings/: CMakeLists.txt  Makefile  cmake_install.cmake  decomposeGivenFieldMapAndDampings.cpp  decomposeGivenFieldMapAndDampings.h
libgraphCutIterations/: CMakeLists.txt  Makefile  cmake_install.cmake  createExpansionGraphVARPRO_fast.cpp  createExpansionGraphVARPRO_fast.h  findLocalMinima.cpp  findLocalMinima.h  graphCutIterations.cpp  graphCutIterations.h
libuwwfs/: CMakeLists.txt  Makefile  cmake_install.cmake  fast_wfs.cpp  fast_wfs.h  fwFit_ComplexLS_1r2star.cpp  fwFit_ComplexLS_1r2star.h  fwFit_MagnLS_1r2star.cpp  fwFit_MagnLS_1r2star.h  fwFit_MixedLS_1r2star.cpp  fwFit_MixedLS_1r2star.cpp.bak  fwFit_MixedLS_1r2star.h  fwFit_MixedLS_1r2star.h.bak  fwFit_VarproLS_1r2star.cpp  fwFit_VarproLS_1r2star.h  libuwwfs.cpp  libuwwfs.h  param_str.h
matlab/: MRconfig.cfg  VARPRO_LUT.m  VARPRO_LUT_mex.cpp  compileMex.m  computeFF.m  fwFit_ComplexLS_1r2sta_fastr.m  fwFit_ComplexLS_1r2star_mex.cpp  fwFit_MagnLS_1r2star.m  fwFit_MagnLS_1r2star_mex.cpp  fwFit_MixedLS_1r2star.m  fwFit_MixedLS_1r2star_mex.cpp  fwFit_VarproLS_1r2star.m  fwFit_VarproLS_1r2star_mex.cpp  loadh5.m  magn_debug_log.txt  run_reconstruction_example.m
package/tools/: estimateR2starGivenFieldmap.py
pycsemri/: VARPRO_LUT.py  calculate_snr_from_fit.py  confidenceMap.py  create_full_crlb_num.py  decomposeGivenFieldMapAndDampings.py  estimate_snr_threshold.py  fwFit_ComplexLS_1r2star.py  fwFit_MagnLS_1r2star.py  fwFit_MixedLS_1r2star.py  fwFit_VarproLS_1r2star.py  graphCutIterations.py  identify_susceptibility_regions.py  identify_swapped_regions.py  save_new_dicom.py
src/: Makefile  fwFit_ComplexLS_1r2star.h  fwFit_MagnLS_1r2star.cpp  fwFit_MagnLS_1r2star.h  libuwwfs.h  main.cpp  param_str.h
tests/: test_varpro.py
tools/: createExpansionGraphVARPRO_fast.py  decomposeGivenFieldMapAndDampings.py
