# pyproject.toml

# This section tells pip how to build your project.
[build-system]
requires = [
    "setuptools>=61.0", # Specify a modern setuptools
    "wheel",
    "scikit-build",
    "cmake>=3.15",
    "numpy"
]
build-backend = "setuptools.build_meta"

# This section declares that some metadata is provided by setup.py
# This is the key fix that resolves the conflict.
[project]
name = "PyCSEMRI"
dynamic = ["version", "description", "readme", "dependencies", "requires-python"]


# --- CIBUILDWHEEL CONFIGURATION ---
[tool.cibuildwheel]
# Build for Python 3.6 and 3.10
build = "cp36-* cp310-*"
skip = "pp*"

# General command to run before all builds
before-build = "python -m pip install --upgrade pip cmake"

# --- OVERRIDE FOR THE PYTHON 3.6 LINUX BUILD ---
[[tool.cibuildwheel.overrides]]
select = "cp36-manylinux*"
# Install an older, compatible version of NumPy for the Python 3.6 build
before-build = "python -m pip install --upgrade pip && python -m pip install numpy<1.20 cmake"

