# pyproject.toml

# This section defines the build system.
[build-system]
requires = [
    # We require a version of setuptools that is compatible with Python 3.6
    "setuptools>=42",
    "wheel",
    "scikit-build",
    "cmake>=3.15",
    "numpy"
]
build-backend = "setuptools.build_meta"


# --- CIBUILDWHEEL CONFIGURATION ---
[tool.cibuildwheel]
# Expanded build matrix: builds for Python 3.6 and modern versions 3.8-3.12
build = "cp36-* cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "pp*"

# General command to run before all builds
before-build = "python -m pip install --upgrade pip cmake"

# --- OVERRIDE FOR THE PYTHON 3.6 LINUX BUILD ---
[[tool.cibuildwheel.overrides]]
select = "cp36-manylinux*"
# Install an older, compatible version of NumPy for the Python 3.6 build
before-build = "python -m pip install --upgrade pip && python -m pip install 'numpy<1.20' cmake"

